2009-03-12  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/Itself/CommonElement.pl: 'choice' is
	also available for 'reference' values

2009-03-10  Dominique Dumont  <dominique.dumont@hp.com>  v1.209

	* t/*.t: Backported mkpath calls to File::Path delivered by perl
	5.8.8

2009-02-24  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/Itself/WarpableElement.pl: changed
	auto_create in auto_create_keys and auto_create_ids (required by
	Config::Model 0.634)

2009-01-09  Dominique Dumont  <dominique.dumont@hp.com> v1.208

	* lib/Config/Model/models/Itself/Class.pl: Added allow_empty
	parameter. Minor corrections related to Augeas integration.

2008-10-14  Dominique Dumont  <dominique.dumont@hp.com> v1.207

	* lib/Config/Model/models/Itself/CommonElement.pl: Added ordered
	parameter to checklist. Ordered checklist feature is required by
	Ssh model for Ciphers list (see Config::Model::OpenSsh).

	* Build.PL: Extract version from Config/Model/Itself.pm (hence the
	bump to v 1.207) so that the pm file versions matches the .tgz
	distribution version.

2008-09-23  Dominique Dumont  <dominique.dumont@hp.com> v0.206

	* lib/Config/Model/models/Itself/Class.pl: Added seq_with_lens
	parameter for Augeas backend.

2008-08-01  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/Itself/Class.pl: Bug fix on Augeas
	parameters

2008-07-25  Dominique Dumont v0.205

	* lib/Config/Model/models/Itself/Class.pl: Fixed specification of
	Augeas parameters

2008-07-25  Dominique Dumont v0.204

	* lib/Config/Model/models/Itself/*.pl: 
	All the changes described below will be handled by the 
	upgrade facility of Config::Model. I.e. to upgrade your 
	configuration model, load your model in config-model-edit, 
	save it, and you're done.
	Changes:
	- Changed auto read and auto write meta-model (needed by 
	  Config::Model 0.624). 
	- autoread autowrite 'syntax' parameter is replaced by 'backend'. 